@@ -1,6 +1,6 @@
 {
-  "count": 5,
-  "uniques": 5,
+  "count": 6,
+  "uniques": 6,
   "clones": [
     {
       "timestamp": "2025-06-28T00:00:00Z",
@@ -19,6 +19,11 @@
     },
     {
       "timestamp": "2025-07-05T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-07-06T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
